--- a/Skork Engine Library/Skork Engine Library.csproj
+++ b/Skork Engine Library/Skork Engine Library.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -49,8 +50,11 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="draw\DrawPlane.cs" />
+    <Compile Include="draw\GeneratePlane.cs" />
     <Compile Include="exception\SkorkDrawException.cs" />
     <Compile Include="exception\SkorkException.cs" />
+    <Compile Include="exception\SkorkInvalidNameException.cs" />
     <Compile Include="parse\SkorkParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -66,6 +70,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="skork\SkorkSprite.cs" />
+    <Compile Include="util\SkorkColors.cs" />
     <Compile Include="util\SkorkKeysID.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
