--- a/Skork Engine Library/Skork Engine Library.csproj
+++ b/Skork Engine Library/Skork Engine Library.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NUnit.3.12.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,6 +14,8 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,6 +42,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -60,13 +66,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="draw\SkorkPlane.cs" />
-    <Compile Include="draw\GeneratePlane.cs" />
-    <Compile Include="exception\SkorkDrawException.cs" />
-    <Compile Include="exception\SkorkException.cs" />
-    <Compile Include="exception\SkorkInvalidNameException.cs" />
-    <Compile Include="exception\SkorkSpriteOverflowException.cs" />
-    <Compile Include="parse\SkorkParser.cs" />
+    <Compile Include="Compile\SkorkCompile.cs" />
+    <Compile Include="Database\DatabaseController.cs" />
+    <Compile Include="Database\DatabaseInstance.cs" />
+    <Compile Include="Debug\SkorkDebug.cs" />
+    <Compile Include="Draw\SkorkPlane.cs" />
+    <Compile Include="Draw\GeneratePlane.cs" />
+    <Compile Include="Exception\SkorkDrawException.cs" />
+    <Compile Include="Exception\SkorkException.cs" />
+    <Compile Include="Exception\SkorkInvalidNameException.cs" />
+    <Compile Include="Exception\SkorkSpriteOverflowException.cs" />
+    <Compile Include="Exception\SkorkSyntaxException.cs" />
+    <Compile Include="Function\ISkorkFunction.cs" />
+    <Compile Include="Function\SkorkWho.cs" />
+    <Compile Include="Parse\SkorkParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -80,9 +93,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="skork\SkorkSprite.cs" />
-    <Compile Include="util\SkorkColors.cs" />
-    <Compile Include="util\SkorkKeysID.cs" />
+    <Compile Include="Skork\SkorkSprite.cs" />
+    <Compile Include="Util\SkorkColors.cs" />
+    <Compile Include="Util\SkorkKeysID.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -96,11 +109,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="compile\" />
-    <Folder Include="database\" />
-    <Folder Include="debug\" />
-    <Folder Include="function\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\NUnit.3.12.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.12.0\build\NUnit.props'))" />
+  </Target>
 </Project>
