--- a/Skork Engine Library/packages.config
+++ b/Skork Engine Library/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="Serilog" version="2.8.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
   <package id="WriteableBitmapEx" version="1.6.2" targetFramework="net472" />
 </packages>
