--- a/Skork.Exceptions/Skork.Exceptions.csproj
+++ b/Skork.Exceptions/Skork.Exceptions.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>a44fbc2f-8f80-4fa4-b4b5-b7c2b4cfff33</ProjectGuid>
+    <ProjectGuid>{A44FBC2F-8F80-4FA4-B4B5-B7C2B4CFFF33}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Skork.Exceptions</RootNamespace>
@@ -31,24 +31,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Compile\Syntax\SkorkInvalidNameException.cs" />
+    <Compile Include="Compile\Syntax\SkorkSyntaxException.cs" />
+    <Compile Include="Enums\ExceptionDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\Draw\SkorkDrawException.cs" />
+    <Compile Include="Runtime\Draw\SkorkOutOfBoundsException.cs" />
+    <Compile Include="Runtime\Entity\SkorkSpriteOverflowException.cs" />
+    <Compile Include="Runtime\Memory\SkorkOutOfMemoryException.cs" />
+    <Compile Include="SkorkException.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Compile\TypeChecking\" />
+    <Folder Include="Runtime\General\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
