--- a/Skork.Language.Entities/Skork.Language.Entities.csproj
+++ b/Skork.Language.Entities/Skork.Language.Entities.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>93762cc5-3772-4c19-8cec-899fab94c2e6</ProjectGuid>
+    <ProjectGuid>{93762CC5-3772-4C19-8CEC-899FAB94C2E6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Skork.Language.Entities</RootNamespace>
@@ -31,24 +31,40 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Template\ISkorkEntity.cs" />
+    <Compile Include="Template\ISkorkMovable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllable\SkorkSprite.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Uncontrollable\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj">
+      <Project>{A44FBC2F-8F80-4FA4-B4B5-B7C2B4CFFF33}</Project>
+      <Name>Skork.Exceptions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Skork.Language.Configurations\Skork.Language.Configurations.csproj">
+      <Project>{105fc504-2030-4c77-b931-9faa26667a97}</Project>
+      <Name>Skork.Language.Configurations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Skork.Window.Draw\Skork.Window.Draw.csproj">
+      <Project>{B84E20DC-0AA4-4111-8FE2-E1D6973325B0}</Project>
+      <Name>Skork.Window.Draw</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
