Added new property interfaces thank SkorkProperties will now reference.

--- a/Skork.Language.Configurations/Skork.Language.Configurations.csproj
+++ b/Skork.Language.Configurations/Skork.Language.Configurations.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEntityProperties.cs" />
+    <Compile Include="ISpriteProperties.cs" />
     <Compile Include="SkorkProperties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
