Adding interfaces used for the models.

--- a/Skork.Data/Skork.Data.csproj
+++ b/Skork.Data/Skork.Data.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IModification.cs" />
+    <Compile Include="Interfaces\IModifiyBy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
