--- a/Skork.Data/Skork.Data.csproj
+++ b/Skork.Data/Skork.Data.csproj
@@ -52,10 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseStructure\DatabaseTables.cs" />
     <Compile Include="Entities\UserContext.cs" />
     <Compile Include="Interfaces\ICreated.cs" />
     <Compile Include="Interfaces\IModification.cs" />
     <Compile Include="Interfaces\IModifiyBy.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
