--- a/Skork.Data/Skork.Data.csproj
+++ b/Skork.Data/Skork.Data.csproj
@@ -66,6 +66,7 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
