--- a/Skork.Language.Entities/Skork.Language.Entities.csproj
+++ b/Skork.Language.Entities/Skork.Language.Entities.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Uncontrollable\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj" />
+    <ProjectReference Include="..\Skork.Language.Configurations\Skork.Language.Configurations.csproj" />
+  </ItemGroup>
+
 </Project>
