--- a/Skork.Language.Functions/Skork.Language.Functions.csproj
+++ b/Skork.Language.Functions/Skork.Language.Functions.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Internal\" />
+    <Folder Include="Programmatically\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj" />
+    <ProjectReference Include="..\Skork.Language.Entities\Skork.Language.Entities.csproj" />
+    <ProjectReference Include="..\Skork.Language.Parse\Skork.Language.Parse.csproj" />
+  </ItemGroup>
 
 </Project>
