--- a/Skork.Language.Runtime/Skork.Language.Runtime.csproj
+++ b/Skork.Language.Runtime/Skork.Language.Runtime.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Managers\" />
+  </ItemGroup>
+
 </Project>
