--- a/Skork.Language.Util/Skork.Language.Util.csproj
+++ b/Skork.Language.Util/Skork.Language.Util.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Compile\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Functions\" />
+    <Folder Include="Logging\" />
+    <Folder Include="UI\" />
+    <Folder Include="Runtime\" />
+    <Folder Include="Parse\" />
+  </ItemGroup>
+
 </Project>
