--- a/Skork.Window.Draw/Skork.Window.Draw.csproj
+++ b/Skork.Window.Draw/Skork.Window.Draw.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj" />
+    <ProjectReference Include="..\Skork.Language.Configurations\Skork.Language.Configurations.csproj" />
+    <ProjectReference Include="..\Skork.Language.Entities\Skork.Language.Entities.csproj" />
+    <ProjectReference Include="..\Skork.Language.Util\Skork.Language.Util.csproj" />
+  </ItemGroup>
+
 </Project>
