Created some interfaces for the User Model and began work on creating a DBContext for the User.

--- a/API/Skork.Data/Skork.Data.csproj
+++ b/API/Skork.Data/Skork.Data.csproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Skork.Domain\Skork.Domain.csproj" />
   </ItemGroup>
 
 </Project>
