--- a/API/Skork.Language.Parse/Skork.Language.Parse.csproj
+++ b/API/Skork.Language.Parse/Skork.Language.Parse.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Cleaner\" />
+    <Folder Include="Formatter\" />
+  </ItemGroup>
+
 </Project>
