Resolved build issues and ran code cleanup

--- a/API/Skork.Data/Skork.Data.csproj
+++ b/API/Skork.Data/Skork.Data.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Skork.Domain\Skork.Domain.csproj" />
+    <ProjectReference Include="..\Skork.Domain\Skork.Domain.csproj" />
   </ItemGroup>
 
 </Project>
