--- a/API/Skork.Language.Entities/Skork.Language.Entities.csproj
+++ b/API/Skork.Language.Entities/Skork.Language.Entities.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="1.68.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj" />
     <ProjectReference Include="..\Skork.Language.Configurations\Skork.Language.Configurations.csproj" />
   </ItemGroup>
