--- a/API/Skork.Language.Util/Skork.Language.Util.csproj
+++ b/API/Skork.Language.Util/Skork.Language.Util.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Compile\" />
+    <Folder Include="Draw\" />
     <Folder Include="Entities\" />
     <Folder Include="Functions\" />
     <Folder Include="Logging\" />
