--- a/Tests/Skork.Language.Parse.Tests/Skork.Language.Parse.Tests.csproj
+++ b/Tests/Skork.Language.Parse.Tests/Skork.Language.Parse.Tests.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cleaner\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\API\Skork.Language.Parse\Skork.Language.Parse.csproj" />
+  </ItemGroup>
+
 </Project>
