More work on adding models.

--- a/API/Skork.Domain/Skork.Domain.csproj
+++ b/API/Skork.Domain/Skork.Domain.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Computer\PSU\" />
+    <Folder Include="Interfaces\Computer\Display\" />
+  </ItemGroup>
+
 </Project>
