--- a/Tests/Skork.Language.Util.Tests/Skork.Language.Util.Tests.csproj
+++ b/Tests/Skork.Language.Util.Tests/Skork.Language.Util.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\API\Skork.Language.Util\Skork.Language.Util.csproj" />
+  </ItemGroup>
+
 </Project>
