Added some testing to some basic utility functions for the parser.

--- a/API/Skork.Language.Parse/Skork.Language.Parse.csproj
+++ b/API/Skork.Language.Parse/Skork.Language.Parse.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Helpers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Skork.Language.Util\Skork.Language.Util.csproj" />
+  </ItemGroup>
+
 </Project>
