--- a/API/Skork.Language.Util/Skork.Language.Util.csproj
+++ b/API/Skork.Language.Util/Skork.Language.Util.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Entities\" />
     <Folder Include="Functions\" />
     <Folder Include="Logging\" />
+    <Folder Include="Parse\Cleaner\" />
     <Folder Include="UI\" />
     <Folder Include="Runtime\" />
   </ItemGroup>
