--- a/API/Skork.Language.Parse/Skork.Language.Parse.csproj
+++ b/API/Skork.Language.Parse/Skork.Language.Parse.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Skork.Language.Util\Skork.Language.Util.csproj" />
+    <Compile Remove="Helpers\**" />
+    <EmbeddedResource Remove="Helpers\**" />
+    <None Remove="Helpers\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <ProjectReference Include="..\Skork.Language.Util\Skork.Language.Util.csproj" />
   </ItemGroup>
 
 </Project>
