--- a/API/Skork.Language.Util/Skork.Language.Util.csproj
+++ b/API/Skork.Language.Util/Skork.Language.Util.csproj
@@ -5,13 +5,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Compile\" />
-    <Folder Include="Entities\" />
-    <Folder Include="Functions\" />
-    <Folder Include="Logging\" />
-    <Folder Include="Draw\" />
-    <Folder Include="UI\" />
-    <Folder Include="Runtime\" />
+    <Compile Remove="Compile\**" />
+    <Compile Remove="Draw\**" />
+    <Compile Remove="Entities\**" />
+    <Compile Remove="Functions\**" />
+    <Compile Remove="Logging\**" />
+    <Compile Remove="Runtime\**" />
+    <Compile Remove="UI\**" />
+    <EmbeddedResource Remove="Compile\**" />
+    <EmbeddedResource Remove="Draw\**" />
+    <EmbeddedResource Remove="Entities\**" />
+    <EmbeddedResource Remove="Functions\**" />
+    <EmbeddedResource Remove="Logging\**" />
+    <EmbeddedResource Remove="Runtime\**" />
+    <EmbeddedResource Remove="UI\**" />
+    <None Remove="Compile\**" />
+    <None Remove="Draw\**" />
+    <None Remove="Entities\**" />
+    <None Remove="Functions\**" />
+    <None Remove="Logging\**" />
+    <None Remove="Runtime\**" />
+    <None Remove="UI\**" />
   </ItemGroup>
 
 </Project>
