--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,4 +14,6 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build SkorkAPI.sln --configuration Release
+    - name: Run unit tests
+      run: dotnet test SkorkTests.sln --configuration Release
