--- a/API/SkorkEngine/SkorkEngine.csproj
+++ b/API/SkorkEngine/SkorkEngine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -10,7 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Skork.Language.Resources\Skork.Language.Resources.csproj" />
     <ProjectReference Include="..\Skork.Data\Skork.Data.csproj" />
     <ProjectReference Include="..\Skork.Domain\Skork.Domain.csproj" />
     <ProjectReference Include="..\Skork.Exceptions\Skork.Exceptions.csproj" />
@@ -19,6 +18,7 @@
     <ProjectReference Include="..\Skork.Language.Entities\Skork.Language.Entities.csproj" />
     <ProjectReference Include="..\Skork.Language.Functions\Skork.Language.Functions.csproj" />
     <ProjectReference Include="..\Skork.Language.Parse\Skork.Language.Parse.csproj" />
+    <ProjectReference Include="..\Skork.Language.Resources\Skork.Language.Resources.csproj" />
     <ProjectReference Include="..\Skork.Language.Runtime\Skork.Language.Runtime.csproj" />
     <ProjectReference Include="..\Skork.Language.Util\Skork.Language.Util.csproj" />
     <ProjectReference Include="..\Skork.Logging\Skork.Logging.csproj" />
