--- a/API/Skork.WPF/Skork.WPF.csproj
+++ b/API/Skork.WPF/Skork.WPF.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\API\SkorkEngine\SkorkEngine.csproj" />
+    <ProjectReference Include="..\Skork.Language.Parse\Skork.Language.Parse.csproj" />
   </ItemGroup>
 
 </Project>
