--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,4 +1,4 @@
-name: .NET Core Continuous Integration 
+name: .NET Core Continuous Integration for SKORK
 
 on: [push]
 
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
-    - name: Build with dotnet
+    - name: Building using Skork.sln
       run: dotnet build Skork.sln --configuration Release
-    - name: Build with dotnet
+    - name: Running unit tests using Skork.sln
       run: dotnet test SkorkTests.sln--configuration Release
