--- a/API/Skork.Window.UI/Skork.Window.UI.csproj
+++ b/API/Skork.Window.UI/Skork.Window.UI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Configurations>Debug;Release;Skork</Configurations>
   </PropertyGroup>
 
 </Project>
