--- a/Tests/Skork.Language.Configurations.Tests/Skork.Language.Configurations.Tests.csproj
+++ b/Tests/Skork.Language.Configurations.Tests/Skork.Language.Configurations.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;Skork</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
