--- a/Tests/Skork.Window.UI.Tests/Skork.Window.UI.Tests.csproj
+++ b/Tests/Skork.Window.UI.Tests/Skork.Window.UI.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Configurations>Debug;Release;Skork</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
