--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - name: Setup Skork CI
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
     - name: Building using Skork.sln
       run: dotnet build Skork.sln --configuration SkorkCI
-    - name: Running unit tests using Skork.sln
-      run: dotnet test SkorkTests.sln --configuration SkorkCI
+    - name: Running unit tests using SkorkTests.sln
+      run: dotnet test SkorkTests.sln --configuration Debug
