--- a/Tests/Skork.Window.UI.Tests/Skork.Window.UI.Tests.csproj
+++ b/Tests/Skork.Window.UI.Tests/Skork.Window.UI.Tests.csproj
@@ -5,7 +5,17 @@
 
     <IsPackable>false</IsPackable>
 
-    <Configurations>Debug;Release;Skork</Configurations>
+    <Configurations>Debug;Release;SkorkCI;SkorkCD</Configurations>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='SkorkCI|AnyCPU'">
+    <Optimize>true</Optimize>
+    <DocumentationFile></DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='SkorkCD|AnyCPU'">
+    <Optimize>true</Optimize>
+    <DocumentationFile>D:\All Files\Programs\C#\SkorkFramework\Tests\Skork.Window.UI.Tests\Skork.Window.UI.Tests.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
