Update to project files

--- a/API/Skork.Language.Util/Skork.Language.Util.csproj
+++ b/API/Skork.Language.Util/Skork.Language.Util.csproj
@@ -39,4 +39,8 @@
     <None Remove="UI\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Parse\Cleaner\" />
+  </ItemGroup>
+
 </Project>
